--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-    <%= VUE_APP_NAME %>
+    Fisioacasa.pe
   </title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDR8TDVxG25csb-WC3zfMzRLf73p0Z_v-I"></script>
-
+  <script src="https://kit.fontawesome.com/2848d3676d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
